edit rabbit eventbus structure
