# InventoryService/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   dto.MessageResponse:
     properties:
@@ -16,6 +17,9 @@ definitions:
     type: object
 info:
   contact: {}
+  description: API Example
+  title: Inventory Service API
+  version: "1.0"
 paths:
   /api/inventory:
     get:
@@ -64,6 +68,34 @@ paths:
       tags:
       - Inventory
   /api/inventory/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete stocks
+      parameters:
+      - description: The ID of the resource
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete Inventory
+      tags:
+      - Inventory
     get:
       consumes:
       - application/json
@@ -120,4 +152,6 @@ paths:
       summary: Update Inventory
       tags:
       - Inventory
+schemes:
+- http
 swagger: "2.0"
